hphp/hack/test/packages/tests/cross_package_access.php.exp
Typing[4444] Cannot access a public element from package 'b' in package 'a' [1]
-> This is from module y.z, which is in package b [2]
-> Module 'x' belongs to package 'a' [3]

cross_package_access.php--x.php:7:14
    5 | public class X {}
    6 | public function test2(): void {
[1] 7 |    $yz = new YZ();
    8 |    // error: member in package b is not visible to package a
    9 | }

cross_package_access.php--yz.php:5:14
    3 | 
    4 | module y.z;
[2] 5 | public class YZ {}
    6 | public function test1(): void {
    7 |    $x = new X(); // ok

cross_package_access.php--modules.php:3:12
    1 | <?hh
    2 | <<file:__EnableUnstableFeatures("modules")>>
[3] 3 | new module x {} // package a
    4 | new module y.z {} // package b

1 error found.
